# 3d-renderer

./: .gitignore  CMakeLists.txt  README.md
docs/: allocation_metrics.md  framebuffer.md
include/allocation_metrics/: allocaion_metrics.h
include/camera/: base-camera.h  camera.h  perspective.h
include/data-structures/: linked-list.h
include/framebuffer/: framebuffer.h  linedrawer.h
include/maths/: matrix.h  transform.h  vector.h  vertex.h
include/objects/: polymesh.h
include/parser/: obj-parser.h  object-parser.h
include/renderer/: base-renderer.h  perspective.h
include/scene/: scene.h
src/: main.cpp
src/allocation_metrics/: allocation_metrics.cpp
src/camera/: camera.cpp  perspective.cpp
src/framebuffer/: framebuffer.cpp  linedrawer.cpp
src/maths/: matrix.cpp  transform.cpp  vector.cpp  vertex.cpp
src/objects/: polymesh.cpp
src/parser/: obj-parser.cpp
src/renderer/: perspective.cpp
